config/chat-app/05_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  labels:
    app: chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      serviceAccountName: chat-app
      containers:
        - name: chat-app
          image: chrisyp/sit727-72hd:v2
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: datadir
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20

        - name: envoy
          image: luksa/kubia-ssl-proxy:1.0
          ports:
            - name: https
              containerPort: 8443
            - name: admin
              containerPort: 9901
          volumeMounts:
            - mountPath: /data
              name: datadir
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 50m
              memory: 200Mi

      volumes:
        - name: datadir
          emptyDir: {}
