config/chat-app/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
  labels:
    app: chat-app
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  selector:
    app: chat-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
