config/chat-app/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service
  labels:
    app: chat-app
spec:
  selector:
    app: chat-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
