config/chat-app/02-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "CHATAPP_ROUTE"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chat-app.local
      secretName: chat-app-tls
  rules:
    - host: chat-app.local
      http:
        paths:
          - path: /socket\.io(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: chat-app
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-app
                port:
                  number: 80
